# Physically-Wasted

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  gui.py  gui.spec  hello  hello.c  nbody.c  nbody.py  run.sh  simulation.py
.github/workflows/: cbuild.yml
frontend/: app.py  requirements.txt
frontend/static/css/: style.css
frontend/static/js/: script.js
frontend/templates/: index.html
include/: bh.h  global.h  nbody.h
pynbody/: __init__.py  pynbody.py
src/: CMakeLists.txt  bh.c  main.c  nbody.c
tests/: CMakeLists.txt  example.c  getr.c  test.h  twobody.c
